chore: project restructure